--- a/01-Layout/03-layout-lab-avanzado/index.html
+++ b/01-Layout/03-layout-lab-avanzado/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="mystyle.css">
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
+    
     <title>Document</title>
 
   </head>
@@ -27,11 +25,12 @@
         Los <span id="top-text"></span> más populares hoy
       </div>
       <section class="top">
-        <div class="top-item"><img src="assets/top/5.jpg" /></div>
-        <div class="top-item"><img src="assets/top/4.jpg" /></div>
-        <div class="top-item"><img src="assets/top/3.jpg" /></div>
-        <div class="top-item"><img src="assets/top/2.jpg" /></div>
         <div class="top-item"><img src="assets/top/1.jpg" /></div>
+        <div class="top-item"><img src="assets/top/2.jpg" /></div>
+        <div class="top-item"><img src="assets/top/3.jpg" /></div>
+        <div class="top-item4"><img src="assets/top/4.jpg" /></div>
+        <div class="top-item5"><img src="assets/top/5.jpg" /></div>     
+
       </section>
       <div class="section-title">Comedias</div>
       <section class="first">
